package circus;

option java_package = "model.save.util";
option java_outer_classname = "ProtoBuffGame";

message ProtoGame {
	optional int32 currentTime = 1;
	optional string localDateTime = 2;
	
	message Player {
		optional string playerName = 1;
		optional int32 playerScore = 2;
		
		message Character {
			optional double height = 1;
			optional double width = 2;
			optional double leftStackXInset = 3;
			optional double leftStackYInset = 4;
			optional double rightStackXInset = 5;
			optional double rightStackYInset = 6;
			optional double xProperty = 7;
			optional double yProperty = 8;
			optional double translateXProperty = 9;
			optional double translateYProperty = 10;
			optional string url = 11;
			optional string key = 12;
			
			message Shape {
				optional string state = 1;
				optional string url = 2;
				optional double width = 3;
				optional double height = 4;
				optional string color = 5;
				optional double x = 6;
				optional double y = 7;
				optional double translateX = 8;
				optional double translateY = 9;
			}
			repeated Shape leftStack = 13;
			repeated Shape rightStack = 14;
			
		}
		optional Character playerCharacter = 3;
	}
	repeated Player players = 3;
}
